updated angular and fixed some alignment

--- a/css/app.css
+++ b/css/app.css
@@ -40,7 +40,7 @@ table, tr, td {
 }
 
 .align-top {
-  vertical-align: top;
+  vertical-align: top !important;
 }
 
 .btn {
